--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,41 +166,44 @@
 
 
 
- <!-- Certifications Section -->
-<section id="certifications" class="certifications">
-    <!-- Animated Background with Icons -->
-    <div class="animated-background">
-        <div class="cloud-icon"></div>
-        <div class="web-icon"></div>
-        <div class="ai-icon"></div>
-        <div class="code-icon"></div>
-    </div>
+    <!-- Certifications Section -->
+    <section id="certifications" class="certifications">
+        <!-- Animated Background with Icons -->
+        <div class="animated-background">
+            <div class="cloud-icon"></div>
+            <div class="web-icon"></div>
+            <div class="ai-icon"></div>
+            <div class="code-icon"></div>
+        </div>
 
-    <!-- Certifications Content -->
-    <div class="container">
-        <h2 class="section-title">Certifications</h2>
-        <ul class="certifications-list">
-            <li class="certification-item">
-                <div class="certification-card">
-                    <img src="./assets/icons/aws-svgrepo-com.svg" alt="AWS Certified Cloud Practitioner Icon" class="certification-icon">
-                    <h3>AWS Certified Cloud Practitioner</h3>
-                </div>
-            </li>
-            <li class="certification-item">
-                <div class="certification-card">
-                    <img src="./assets/icons/google-cloud-svgrepo-com.svg" alt="Google Cloud Certified Icon" class="certification-icon">
-                    <h3>Google Cloud Certified - Associate Cloud Engineer</h3>
-                </div>
-            </li>
-            <li class="certification-item">
-                <div class="certification-card">
-                    <img src="./assets/icons/tensorflow-svgrepo-com.svg" alt="TensorFlow Developer Certificate Icon" class="certification-icon">
-                    <h3>TensorFlow Developer Certificate</h3>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
+        <!-- Certifications Content -->
+        <div class="container">
+            <h2 class="section-title">Certifications</h2>
+            <ul class="certifications-list">
+                <li class="certification-item">
+                    <div class="certification-card">
+                        <img src="./assets/icons/aws-svgrepo-com.svg" alt="AWS Certified Cloud Practitioner Icon"
+                            class="certification-icon">
+                        <h3>AWS Certified Cloud Practitioner</h3>
+                    </div>
+                </li>
+                <li class="certification-item">
+                    <div class="certification-card">
+                        <img src="./assets/icons/google-cloud-svgrepo-com.svg" alt="Google Cloud Certified Icon"
+                            class="certification-icon">
+                        <h3>Google Cloud Certified - Associate Cloud Engineer</h3>
+                    </div>
+                </li>
+                <li class="certification-item">
+                    <div class="certification-card">
+                        <img src="./assets/icons/tensorflow-svgrepo-com.svg" alt="TensorFlow Developer Certificate Icon"
+                            class="certification-icon">
+                        <h3>TensorFlow Developer Certificate</h3>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 
 
 
@@ -212,13 +215,14 @@
             <div class="ai-icon"><img src="assets/icons/google-cloud-svgrepo-com.svg" alt=""></div>
             <div class="web-icon"><img src="assets/icons/tensorflow-svgrepo-com.svg" alt=""></div>
         </div>
-    
+
         <!-- Resume Content -->
         <div class="container">
             <h2 class="section-title">Resume</h2>
             <div class="resume-content">
                 <p class="resume-description">
-                    Explore my professional journey, skills, and experiences. Click below to download a copy of my resume.
+                    Explore my professional journey, skills, and experiences. Click below to download a copy of my
+                    resume.
                 </p>
                 <a href="resume.pdf" class="cta-button" download>
                     <span class="button-icon">📄</span> Download Resume
@@ -226,67 +230,79 @@
             </div>
         </div>
     </section>
-    
-<!-- services serction  -->
- <section>
-    <div class="services" id="services">
-        <!-- Animated Background -->
-        <div class="animated-background">
-           <div class="cloud-icon"><img src="assets/icons/aws-svgrepo-com.svg" alt="aws"></div>
-           <div class="ai-icon"><img src="assets/icons/google-cloud-svgrepo-com.svg" alt=""></div>
-           <div class="web-icon"><img src="assets/icons/tensorflow-svgrepo-com.svg" alt=""></div>
-       </div>
-       <div class="container">
-           <h2>What I Offer</h2>
-           <div class="services-list">
-               <div class="service-item">
-                   <i class="fas fa-laptop-code"></i>
-                   <h3>Full Stack Web Development</h3>
-                   <p>I build dynamic, scalable, and responsive web applications using modern technologies like Django,
-                       React, and Node.js.</p>
-               </div>
-               <div class="service-item">
-                   <i class="fas fa-cloud"></i>
-                   <h3>Cloud Infrastructure Solutions (AWS)</h3>
-                   <p>Providing robust cloud solutions with AWS, including deployment, monitoring, and scaling of your
-                       web applications.</p>
-               </div>
-               <div class="service-item">
-                   <i class="fas fa-robot"></i>
-                   <h3>Machine Learning Model Development</h3>
-                   <p>Creating custom machine learning models tailored to solve real-world problems and improve
-                       data-driven decision making.</p>
-               </div>
-               <div class="service-item">
-                   <i class="fas fa-brain"></i>
-                   <h3>Artificial Intelligence Solutions</h3>
-                   <p>Implementing AI-powered systems for automation, optimization, and data analysis to drive
-                       efficiency and innovation.</p>
-               </div>
-               <div class="service-item">
-                   <i class="fas fa-cogs"></i>
-                   <h3>Custom Software Development</h3>
-                   <p>Delivering bespoke software solutions to meet your unique business needs and optimize workflows.
-                   </p>
-               </div>
-               <div class="service-item">
-                   <i class="fas fa-mobile-alt"></i>
-                   <h3>Responsive Web Application Design</h3>
-                   <p>Designing responsive, mobile-first web applications that ensure a seamless experience across all
-                       devices.</p>
-               </div>
-           </div>
-       </div>
 
-   </div>
+    <!-- services serction  -->
+    <section>
+        <div class="services" id="services">
+            <!-- Animated Background -->
+            <div class="animated-background">
+                <div class="cloud-icon"><img src="assets/icons/aws-svgrepo-com.svg" alt="aws"></div>
+                <div class="ai-icon"><img src="assets/icons/google-cloud-svgrepo-com.svg" alt=""></div>
+                <div class="web-icon"><img src="assets/icons/tensorflow-svgrepo-com.svg" alt=""></div>
+            </div>
+            <div class="container">
+                <h2>What I Offer</h2>
+                <div class="services-list">
+                    <div class="service-item">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>Full Stack Web Development</h3>
+                        <p>I build dynamic, scalable, and responsive web applications using modern technologies like
+                            Django,
+                            React, and Node.js.</p>
+                    </div>
+                    <div class="service-item">
+                        <i class="fas fa-cloud"></i>
+                        <h3>Cloud Infrastructure Solutions (AWS)</h3>
+                        <p>Providing robust cloud solutions with AWS, including deployment, monitoring, and scaling of
+                            your
+                            web applications.</p>
+                    </div>
+                    <div class="service-item">
+                        <i class="fas fa-robot"></i>
+                        <h3>Machine Learning Model Development</h3>
+                        <p>Creating custom machine learning models tailored to solve real-world problems and improve
+                            data-driven decision making.</p>
+                    </div>
+                    <div class="service-item">
+                        <i class="fas fa-brain"></i>
+                        <h3>Artificial Intelligence Solutions</h3>
+                        <p>Implementing AI-powered systems for automation, optimization, and data analysis to drive
+                            efficiency and innovation.</p>
+                    </div>
+                    <div class="service-item">
+                        <i class="fas fa-cogs"></i>
+                        <h3>Custom Software Development</h3>
+                        <p>Delivering bespoke software solutions to meet your unique business needs and optimize
+                            workflows.
+                        </p>
+                    </div>
+                    <div class="service-item">
+                        <i class="fas fa-mobile-alt"></i>
+                        <h3>Responsive Web Application Design</h3>
+                        <p>Designing responsive, mobile-first web applications that ensure a seamless experience across
+                            all
+                            devices.</p>
+                    </div>
+                </div>
+            </div>
 
- </section>
-   
+        </div>
+
+    </section>
+
 
 
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
+        <!-- Animated Background -->
+        <div class="animated-background">
+            <div class="mail-icon"><i class="fa-solid fa-envelope"></i></div>
+            <div class="chat-icon"><i class="fa-regular fa-comment"></i></div>
+            <div class="phone-icon"><i class="fa-solid fa-phone"></i></div>
+        </div>
+
+        <!-- Contact Content -->
         <div class="container">
             <h2 class="section-title">Contact Me</h2>
             <p class="contact-description">
@@ -307,10 +323,27 @@
                     <textarea id="message" name="message" placeholder="Write your message here..." rows="5"
                         required></textarea>
                 </div>
-                <button type="submit" class="cta-button">Send Message</button>
+                <button type="submit" class="cta-button">
+                    <span class="button-icon">📧</span> Send Message
+                </button>
             </form>
+
+
+            <!-- Social Media Links -->
+            <div class="social-media-links">
+                <a href="https://github.com/yourusername" target="_blank" class="social-icon github">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://twitter.com/yourusername" target="_blank" class="social-icon twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/yourusername" target="_blank" class="social-icon linkedin">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
         </div>
     </section>
+
 
 
 
