--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,7 +74,7 @@
         <div id="background-animation"></div>
     </section>
 
-
+<hr>
 
 
     <section id="about" class="about">
@@ -107,7 +107,7 @@
             </div>
         </div>
     </section>
-
+<hr>
     <section id="portfolio" class="portfolio">
 
         <!-- Background with dynamic animated icons -->
@@ -162,8 +162,7 @@
 
 
     </section>
-
-
+<hr>
 
 
     <!-- Certifications Section -->
@@ -205,7 +204,7 @@
         </div>
     </section>
 
-
+<hr>
 
     <!-- Resume Section -->
     <section id="resume" class="resume">
@@ -230,7 +229,7 @@
             </div>
         </div>
     </section>
-
+<hr>
     <!-- services serction  -->
     <section>
         <div class="services" id="services">
@@ -291,7 +290,7 @@
     </section>
 
 
-
+<hr>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
@@ -331,13 +330,13 @@
 
             <!-- Social Media Links -->
             <div class="social-media-links">
-                <a href="https://github.com/yourusername" target="_blank" class="social-icon github">
+                <a href="https://github.com/KhatriSuson" target="_blank" class="social-icon github">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://twitter.com/yourusername" target="_blank" class="social-icon twitter">
+                <a href="https://twitter.com/SushanKhatri4" target="_blank" class="social-icon twitter">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/yourusername" target="_blank" class="social-icon linkedin">
+                <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank" class="social-icon linkedin">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
@@ -346,14 +345,18 @@
 
 
 
-
+<hr>
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
+                <!-- Footer Logo -->
                 <div class="footer-logo">
-                    <h2>KhatriSuson</h2>
+                    <a href="#home"><h2>KhatriSuson</h2></a>
+                    
                 </div>
+
+                <!-- Footer Navigation Links -->
                 <nav class="footer-nav">
                     <ul class="footer-links">
                         <li><a href="#home">Home</a></li>
@@ -364,17 +367,28 @@
                     </ul>
                 </nav>
             </div>
+
+            <!-- Footer Bottom Section -->
             <div class="footer-bottom">
                 <p>&copy; 2024 KhatriSuson. All Rights Reserved.</p>
+
+                <!-- Social Media Icons -->
                 <div class="social-icons">
-                    <a href="https://x.com/SushanKhatri4" target="_blank" aria-label="Twitter">🐦</a>
-                    <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank"
-                        aria-label="LinkedIn">🔗</a>
-                    <a href="https://github.com/KhatriSuson" target="_blank" aria-label="GitHub">🐙</a>
+                    <a href="https://x.com/SushanKhatri4" target="_blank" aria-label="Twitter" class="social-icon">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/sushan-khatri-959248259/" target="_blank" aria-label="LinkedIn"
+                        class="social-icon">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/KhatriSuson" target="_blank" aria-label="GitHub" class="social-icon">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </footer>
+
     <script src="js/portfolio-script.js"></script>
 </body>
 
