--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <section id="certifications" class="certifications">
         <!-- Animated Background with Icons -->
         <div class="animated-background">
-            <div class="cloud-icon"></div>
+            <div class="cloud-icon">ah</div>
             <div class="web-icon"></div>
             <div class="ai-icon"></div>
             <div class="code-icon"></div>
@@ -181,7 +181,7 @@
             <ul class="certifications-list">
                 <li class="certification-item">
                     <div class="certification-card">
-                        <img src="./assets/icons/aws-svgrepo-com.svg" alt="AWS Certified Cloud Practitioner Icon"
+                        <img src="./assets/img/aws.jpeg" alt="AWS Certified Cloud Practitioner Icon"
                             class="certification-icon">
                         <h3>AWS Certified Cloud Practitioner</h3>
                     </div>
