--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     <section id="certifications" class="certifications">
         <!-- Animated Background with Icons -->
         <div class="animated-background">
-            <div class="cloud-icon">ah</div>
-            <div class="web-icon"></div>
-            <div class="ai-icon"></div>
-            <div class="code-icon"></div>
+            <div class="cloud-icon"><i class="fa-brands fa-aws"></i></div>
+            <div class="web-icon"><i class="fa-brands fa-google"></i></div>
+            <div class="ai-icon"><i class="fa-solid fa-code"></i></div>
+            <div class="code-icon"><i class="fa-brands fa-python"></i></div>
         </div>
 
         <!-- Certifications Content -->
@@ -188,14 +188,14 @@
                 </li>
                 <li class="certification-item">
                     <div class="certification-card">
-                        <img src="./assets/icons/google-cloud-svgrepo-com.svg" alt="Google Cloud Certified Icon"
+                        <img src="./assets/img/google.jpg" alt="Google Cloud Certified Icon"
                             class="certification-icon">
                         <h3>Google Cloud Certified - Associate Cloud Engineer</h3>
                     </div>
                 </li>
                 <li class="certification-item">
                     <div class="certification-card">
-                        <img src="./assets/icons/tensorflow-svgrepo-com.svg" alt="TensorFlow Developer Certificate Icon"
+                        <img src="./assets/img/tensorflow_files/faviconV2.png" alt="TensorFlow Developer Certificate Icon"
                             class="certification-icon">
                         <h3>TensorFlow Developer Certificate</h3>
                     </div>
