--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="hero-content">
             <div class="text-content">
                 <h1>Hi, I'm Sushan Khatri</h1>
-                <p>Full Stack Developer | Cloud Practitioner | AI/ML Engineer</p>
+                <p>Full Stack Developer | Cloud Practitioner | AI/ML Developer</p>
                 <a href="https://github.com/KhatriSuson" class="cta-button" target="_blank">View My Work</a>
                 <div class="social-icons">
                     <a href="https://github.com/KhatriSuson" target="_blank" class="icon-link">
