--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="nav-container">
             <!-- Logo Section -->
             <div class="logo">
-                <a href="#home">Sushan Khatri</a>
+                <a href="#home">Sushan Khatri Loves Dolma Tamang</a>
             </div>
 
             <!-- Theme Toggle Button -->
