--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="nav-container">
             <!-- Logo Section -->
             <div class="logo">
-                <a href="#home">Sushan Khatri Loves Dolma Tamang</a>
+                <a href="#home">Sushan Khatri</a>
             </div>
 
             <!-- Theme Toggle Button -->
@@ -48,7 +48,6 @@
         </div>
     </header>
 
-<h1>I love you </h1>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
