--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#certifications">Certificates</a></li>
                     <li><a href="#services">Services</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
