update blog page

--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
     <section class="featured-post">
         <img src="featured-post-image.jpg" alt="Featured Post" class="featured-image">
         <h2 class="featured-title">Python Programming</h2>
-        <p class="featured-excerpt">A short excerpt of the featured post goes here. It should give readers a glimpse of what the post is about.</p>
+        <p class="featured-excerpt">Learn essential tips and techniques to get started with Python programming, from understanding syntax to building your first project.</p>
         <a href="#" class="btn btn-primary">Read More</a>
     </section>
 
@@ -61,8 +61,8 @@
     <section class="blog-grid">
         <div class="blog-post">
             <img src="post-thumbnail-1.jpg" alt="Post 1" class="blog-thumbnail">
-            <h3 class="blog-title">Blog Post Title 1</h3>
-            <p class="blog-excerpt">Short description of the blog post. This is an engaging snippet that entices users to read more.</p>
+            <h3 class="blog-title">Artificial Intelligence / Machine Learning (AI/ML)</h3>
+            <p class="blog-excerpt">Explore the basics of AI and machine learning in simple terms, and learn how they impact our daily lives.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
@@ -73,8 +73,21 @@
         </div>
         <div class="blog-post">
             <img src="post-thumbnail-3.jpg" alt="Post 3" class="blog-thumbnail">
-            <h3 class="blog-title">Blog Post Title 3</h3>
-            <p class="blog-excerpt">Short description of the blog post. This is an engaging snippet that entices users to read more.</p>
+            <h3 class="blog-title">Web Development</h3>
+            <p class="blog-excerpt">Stay ahead of the curve with the latest trends in web development, from frameworks to design principles.</p>
+            <a href="#" class="btn btn-secondary">Read More</a>
+        </div>
+
+        <div class="blog-post">
+            <img src="post-thumbnail-3.jpg" alt="Post 3" class="blog-thumbnail">
+            <h3 class="blog-title">AWS Services</h3>
+            <p class="blog-excerpt">Learn the basics of Amazon Web Services (AWS), its key offerings, and how it’s transforming cloud computing for businesses and developers.</p>
+            <a href="#" class="btn btn-secondary">Read More</a>
+        </div>
+        <div class="blog-post">
+            <img src="post-thumbnail-3.jpg" alt="Post 3" class="blog-thumbnail">
+            <h3 class="blog-title">BICT General Topics</h3>
+            <p class="blog-excerpt">Explore the diverse career opportunities available to BICT graduates, from networking and software development to IT consulting.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
         </div>
     </section>
