--- a/blog.html
+++ b/blog.html
@@ -52,8 +52,8 @@
 
     <section class="featured-post">
         <img src="featured-post-image.jpg" alt="Featured Post" class="featured-image">
-        <h2 class="featured-title">Python Programming</h2>
-        <p class="featured-excerpt">Learn essential tips and techniques to get started with Python programming, from understanding syntax to building your first project.</p>
+        <h2 class="featured-title"></h2>
+        <p class="featured-excerpt"></p>
         <a href="#" class="btn btn-primary">Read More</a>
     </section>
 
@@ -67,8 +67,8 @@
         </div>
         <div class="blog-post">
             <img src="post-thumbnail-2.jpg" alt="Post 2" class="blog-thumbnail">
-            <h3 class="blog-title">Blog Post Title 2</h3>
-            <p class="blog-excerpt">Short description of the blog post. This is an engaging snippet that entices users to read more.</p>
+            <h3 class="blog-title">Python Programming</h3>
+            <p class="blog-excerpt">Learn essential tips and techniques to get started with Python programming, from understanding syntax to building your first project.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
