--- a/blog.html
+++ b/blog.html
@@ -34,10 +34,10 @@
             <!-- Navigation Links -->
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#certifications">Certificates</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Portfolio</a></li>
+                    <li><a href="index.html">Certificates</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
