--- a/blog.html
+++ b/blog.html
@@ -38,9 +38,9 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="index.html">Portfolio</a></li>
                     <li><a href="index.html">Certificates</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="index.html">Services</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
 
@@ -63,7 +63,7 @@
             <img src="post-thumbnail-1.jpg" alt="Post 1" class="blog-thumbnail">
             <h3 class="blog-title">Artificial Intelligence / Machine Learning (AI/ML)</h3>
             <p class="blog-excerpt">Explore the basics of AI and machine learning in simple terms, and learn how they impact our daily lives.</p>
-            <a href="#" class="btn btn-secondary">Read More</a>
+            <a href="readmore.html" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
             <img src="post-thumbnail-2.jpg" alt="Post 2" class="blog-thumbnail">
