--- a/blog.html
+++ b/blog.html
@@ -52,40 +52,42 @@
 
     <section class="featured-post">
         <img src="featured-post-image.jpg" alt="Featured Post" class="featured-image">
-        <h2 class="featured-title"></h2>
-        <p class="featured-excerpt"></p>
+        <h2 class="featured-title">Welcome to My Blog!</h2>
+        <p class="featured-excerpt">Welcome to my blog! <br>Here, I share tips, tutorials, and stories about the things <br>I’m passionate about, like technology, coding, personal<br> growth, and the latest industry trends. <br>Whether you're a developer, a tech lover, or just someone<br> curious to learn something new, you’ll find plenty of interesting content here.
+            <br><b>-"Explore the latest posts below, and let’s learn and grow together!"</b>
+        </p>
         <a href="#" class="btn btn-primary">Read More</a>
     </section>
 
     <!-- Blog Grid Section -->
     <section class="blog-grid">
         <div class="blog-post">
-            <img src="post-thumbnail-1.jpg" alt="Post 1" class="blog-thumbnail">
+            <img src="assets/img/ai-ml.jpg" alt="Post 1" class="blog-thumbnail">
             <h3 class="blog-title">Artificial Intelligence / Machine Learning (AI/ML)</h3>
             <p class="blog-excerpt">Explore the basics of AI and machine learning in simple terms, and learn how they impact our daily lives.</p>
             <a href="readmore.html" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
-            <img src="post-thumbnail-2.jpg" alt="Post 2" class="blog-thumbnail">
+            <img src="assets/img/python.jpeg" alt="Post 2" class="blog-thumbnail">
             <h3 class="blog-title">Python Programming</h3>
             <p class="blog-excerpt">Learn essential tips and techniques to get started with Python programming, from understanding syntax to building your first project.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
-            <img src="post-thumbnail-3.jpg" alt="Post 3" class="blog-thumbnail">
+            <img src="assets/img/web-development.png" alt="Post 3" class="blog-thumbnail">
             <h3 class="blog-title">Web Development</h3>
             <p class="blog-excerpt">Stay ahead of the curve with the latest trends in web development, from frameworks to design principles.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
         </div>
 
         <div class="blog-post">
-            <img src="post-thumbnail-3.jpg" alt="Post 3" class="blog-thumbnail">
+            <img src="assets/img/aws-servies.png" alt="Post 3" class="blog-thumbnail">
             <h3 class="blog-title">AWS Services</h3>
             <p class="blog-excerpt">Learn the basics of Amazon Web Services (AWS), its key offerings, and how it’s transforming cloud computing for businesses and developers.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
-            <img src="post-thumbnail-3.jpg" alt="Post 3" class="blog-thumbnail">
+            <img src="assets/img/ict.jpg" alt="Post 3" class="blog-thumbnail">
             <h3 class="blog-title">BICT General Topics</h3>
             <p class="blog-excerpt">Explore the diverse career opportunities available to BICT graduates, from networking and software development to IT consulting.</p>
             <a href="#" class="btn btn-secondary">Read More</a>
