--- a/ai-mi-readmore.html
+++ b/ai-mi-readmore.html
@@ -142,13 +142,14 @@
        
     <!-- Blog Post Content -->
     <section class="blog-container">
-        <h1 class="blog-title">Blog Post Title</h1>
-        <p class="blog-meta">Posted on <strong>March 15, 2024</strong> by <strong>Author Name</strong></p>
+        <h1 class="blog-title">Artificial Intelligence / Machine Learning (AI/ML)</h1>
+        <p class="blog-meta">Posted on <strong>Dec 20, 2024</strong> by <strong>Sushan Khatri</strong></p>
         <div class="blog-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque euismod, felis eget fermentum accumsan, arcu nulla cursus orci, a tincidunt ligula enim nec odio. Mauris dapibus nisi ac nisl vehicula, vel fermentum orci lacinia.</p>
-            <img src="blog-post-image.jpg" alt="Blog Post Image">
-            <p>Vivamus sagittis, erat in vehicula tincidunt, ex elit bibendum libero, id posuere massa est eu metus. Duis ac tortor et lacus efficitur feugiat. Phasellus id vulputate est, non facilisis nunc. Suspendisse potenti.</p>
-            <p>Donec vehicula eros a justo varius, sit amet blandit nulla venenatis. Integer pellentesque luctus ipsum, ut convallis massa mollis sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            <h3>AI for Everyone: Demystifying Artificial Intelligence</h3>
+            <p>Artificial Intelligence (AI) is revolutionizing industries, from healthcare to entertainment. But what exactly is AI, and how does it work? This blog breaks it down in simple terms, showing how AI makes machines smarter and how you interact with it daily—like in search engines or virtual assistants.</p>
+            <img src="assets/img/ai-ml.jpg" alt="Blog Post Image">
+            <h3>Getting Started with Machine Learning: A Beginner’s Guide</h3>
+            <p>Machine learning can seem overwhelming at first, but it's easier than you think. This guide introduces the basics, including supervised and unsupervised learning, common algorithms, and tools like Scikit-learn and TensorFlow. You’ll also get hands-on with a simple machine-learning project to solidify your understanding.</p>
         </div>
         <div class="back-button" onclick="goBack()">Back to Blog</div>
     </section>
